tools/antlr4/OpenQASM3Parser.dart
// Generated from c:/_Projects/github/qartvm/tools/antlr4/OpenQASM3Parser.g4 by ANTLR 4.13.1
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import 'package:antlr4/antlr4.dart';

import 'OpenQASM3ParserVisitor.dart';
import 'OpenQASM3ParserBaseVisitor.dart';
const int RULE_program = 0, RULE_version = 1, RULE_statement = 2, RULE_annotation = 3, 
          RULE_scope = 4, RULE_pragma = 5, RULE_statementOrScope = 6, RULE_calibrationGrammarStatement = 7, 
          RULE_includeStatement = 8, RULE_breakStatement = 9, RULE_continueStatement = 10, 
          RULE_endStatement = 11, RULE_forStatement = 12, RULE_ifStatement = 13, 
          RULE_returnStatement = 14, RULE_whileStatement = 15, RULE_barrierStatement = 16, 
          RULE_boxStatement = 17, RULE_delayStatement = 18, RULE_gateCallStatement = 19, 
          RULE_measureArrowAssignmentStatement = 20, RULE_resetStatement = 21, 
          RULE_aliasDeclarationStatement = 22, RULE_classicalDeclarationStatement = 23, 
          RULE_constDeclarationStatement = 24, RULE_ioDeclarationStatement = 25, 
          RULE_oldStyleDeclarationStatement = 26, RULE_quantumDeclarationStatement = 27, 
          RULE_defStatement = 28, RULE_externStatement = 29, RULE_gateStatement = 30, 
          RULE_assignmentStatement = 31, RULE_expressionStatement = 32, 
          RULE_calStatement = 33, RULE_defcalStatement = 34, RULE_expression = 35, 
          RULE_aliasExpression = 36, RULE_declarationExpression = 37, RULE_measureExpression = 38, 
          RULE_rangeExpression = 39, RULE_setExpression = 40, RULE_arrayLiteral = 41, 
          RULE_indexOperator = 42, RULE_indexedIdentifier = 43, RULE_returnSignature = 44, 
          RULE_gateModifier = 45, RULE_scalarType = 46, RULE_qubitType = 47, 
          RULE_arrayType = 48, RULE_arrayReferenceType = 49, RULE_designator = 50, 
          RULE_defcalTarget = 51, RULE_defcalArgumentDefinition = 52, RULE_defcalOperand = 53, 
          RULE_gateOperand = 54, RULE_externArgument = 55, RULE_argumentDefinition = 56, 
          RULE_argumentDefinitionList = 57, RULE_defcalArgumentDefinitionList = 58, 
          RULE_defcalOperandList = 59, RULE_expressionList = 60, RULE_identifierList = 61, 
          RULE_gateOperandList = 62, RULE_externArgumentList = 63;
class OpenQASM3Parser extends Parser {
  static final checkVersion = () => RuntimeMetaData.checkVersion('4.13.1', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache = PredictionContextCache();
  static const int TOKEN_OPENQASM = 1, TOKEN_INCLUDE = 2, TOKEN_DEFCALGRAMMAR = 3, 
                   TOKEN_DEF = 4, TOKEN_CAL = 5, TOKEN_DEFCAL = 6, TOKEN_GATE = 7, 
                   TOKEN_EXTERN = 8, TOKEN_BOX = 9, TOKEN_LET = 10, TOKEN_BREAK = 11, 
                   TOKEN_CONTINUE = 12, TOKEN_IF = 13, TOKEN_ELSE = 14, 
                   TOKEN_END = 15, TOKEN_RETURN = 16, TOKEN_FOR = 17, TOKEN_WHILE = 18, 
                   TOKEN_IN = 19, TOKEN_PRAGMA = 20, TOKEN_AnnotationKeyword = 21, 
                   TOKEN_INPUT = 22, TOKEN_OUTPUT = 23, TOKEN_CONST = 24, 
                   TOKEN_READONLY = 25, TOKEN_MUTABLE = 26, TOKEN_QREG = 27, 
                   TOKEN_QUBIT = 28, TOKEN_CREG = 29, TOKEN_BOOL = 30, TOKEN_BIT = 31, 
                   TOKEN_INT = 32, TOKEN_UINT = 33, TOKEN_FLOAT = 34, TOKEN_ANGLE = 35, 
                   TOKEN_COMPLEX = 36, TOKEN_ARRAY = 37, TOKEN_VOID = 38, 
                   TOKEN_DURATION = 39, TOKEN_STRETCH = 40, TOKEN_STRING = 41, 
                   TOKEN_GPHASE = 42, TOKEN_INV = 43, TOKEN_POW = 44, TOKEN_CTRL = 45, 
                   TOKEN_NEGCTRL = 46, TOKEN_DIM = 47, TOKEN_DURATIONOF = 48, 
                   TOKEN_DELAY = 49, TOKEN_RESET = 50, TOKEN_MEASURE = 51, 
                   TOKEN_BARRIER = 52, TOKEN_BooleanLiteral = 53, TOKEN_LBRACKET = 54, 
                   TOKEN_RBRACKET = 55, TOKEN_LBRACE = 56, TOKEN_RBRACE = 57, 
                   TOKEN_LPAREN = 58, TOKEN_RPAREN = 59, TOKEN_COLON = 60, 
                   TOKEN_SEMICOLON = 61, TOKEN_DOT = 62, TOKEN_COMMA = 63, 
                   TOKEN_EQUALS = 64, TOKEN_ARROW = 65, TOKEN_PLUS = 66, 
                   TOKEN_DOUBLE_PLUS = 67, TOKEN_MINUS = 68, TOKEN_ASTERISK = 69, 
                   TOKEN_DOUBLE_ASTERISK = 70, TOKEN_SLASH = 71, TOKEN_PERCENT = 72, 
                   TOKEN_PIPE = 73, TOKEN_DOUBLE_PIPE = 74, TOKEN_AMPERSAND = 75, 
                   TOKEN_DOUBLE_AMPERSAND = 76, TOKEN_CARET = 77, TOKEN_AT = 78, 
                   TOKEN_TILDE = 79, TOKEN_EXCLAMATION_POINT = 80, TOKEN_EqualityOperator = 81, 
                   TOKEN_CompoundAssignmentOperator = 82, TOKEN_ComparisonOperator = 83, 
                   TOKEN_BitshiftOperator = 84, TOKEN_IMAG = 85, TOKEN_ImaginaryLiteral = 86, 
                   TOKEN_BinaryIntegerLiteral = 87, TOKEN_OctalIntegerLiteral = 88, 
                   TOKEN_DecimalIntegerLiteral = 89, TOKEN_HexIntegerLiteral = 90, 
                   TOKEN_Identifier = 91, TOKEN_HardwareQubit = 92, TOKEN_FloatLiteral = 93, 
                   TOKEN_TimingLiteral = 94, TOKEN_BitstringLiteral = 95, 
                   TOKEN_StringLiteral = 96, TOKEN_Whitespace = 97, TOKEN_Newline = 98, 
                   TOKEN_LineComment = 99, TOKEN_BlockComment = 100, TOKEN_VERSION_IDENTIFER_WHITESPACE = 101, 
                   TOKEN_VersionSpecifier = 102, TOKEN_EAT_INITIAL_SPACE = 103, 
                   TOKEN_EAT_LINE_END = 104, TOKEN_RemainingLineContent = 105, 
                   TOKEN_CAL_PRELUDE_WHITESPACE = 106, TOKEN_CAL_PRELUDE_COMMENT = 107, 
                   TOKEN_DEFCAL_PRELUDE_WHITESPACE = 108, TOKEN_DEFCAL_PRELUDE_COMMENT = 109, 
                   TOKEN_CalibrationBlock = 110;

  @override
  final List<String> ruleNames = [
    'program', 'version', 'statement', 'annotation', 'scope', 'pragma', 
    'statementOrScope', 'calibrationGrammarStatement', 'includeStatement', 
    'breakStatement', 'continueStatement', 'endStatement', 'forStatement', 
    'ifStatement', 'returnStatement', 'whileStatement', 'barrierStatement', 
    'boxStatement', 'delayStatement', 'gateCallStatement', 'measureArrowAssignmentStatement', 
    'resetStatement', 'aliasDeclarationStatement', 'classicalDeclarationStatement', 
    'constDeclarationStatement', 'ioDeclarationStatement', 'oldStyleDeclarationStatement', 
    'quantumDeclarationStatement', 'defStatement', 'externStatement', 'gateStatement', 
    'assignmentStatement', 'expressionStatement', 'calStatement', 'defcalStatement', 
    'expression', 'aliasExpression', 'declarationExpression', 'measureExpression', 
    'rangeExpression', 'setExpression', 'arrayLiteral', 'indexOperator', 
    'indexedIdentifier', 'returnSignature', 'gateModifier', 'scalarType', 
    'qubitType', 'arrayType', 'arrayReferenceType', 'designator', 'defcalTarget', 
    'defcalArgumentDefinition', 'defcalOperand', 'gateOperand', 'externArgument', 
    'argumentDefinition', 'argumentDefinitionList', 'defcalArgumentDefinitionList', 
    'defcalOperandList', 'expressionList', 'identifierList', 'gateOperandList', 
    'externArgumentList'
  ];

  static final List<String?> _LITERAL_NAMES = [
      null, "'OPENQASM'", "'include'", "'defcalgrammar'", "'def'", "'cal'", 
      "'defcal'", "'gate'", "'extern'", "'box'", "'let'", "'break'", "'continue'", 
      "'if'", "'else'", "'end'", "'return'", "'for'", "'while'", "'in'", 
      null, null, "'input'", "'output'", "'const'", "'readonly'", "'mutable'", 
      "'qreg'", "'qubit'", "'creg'", "'bool'", "'bit'", "'int'", "'uint'", 
      "'float'", "'angle'", "'complex'", "'array'", "'void'", "'duration'", 
      "'stretch'", "'string'", "'gphase'", "'inv'", "'pow'", "'ctrl'", "'negctrl'", 
      "'#dim'", "'durationof'", "'delay'", "'reset'", "'measure'", "'barrier'", 
      null, "'['", "']'", "'{'", "'}'", "'('", "')'", "':'", "';'", "'.'", 
      "','", "'='", "'->'", "'+'", "'++'", "'-'", "'*'", "'**'", "'/'", 
      "'%'", "'|'", "'||'", "'&'", "'&&'", "'^'", "'@'", "'~'", "'!'", null, 
      null, null, null, "'im'"
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
      null, "OPENQASM", "INCLUDE", "DEFCALGRAMMAR", "DEF", "CAL", "DEFCAL", 
      "GATE", "EXTERN", "BOX", "LET", "BREAK", "CONTINUE", "IF", "ELSE", 
      "END", "RETURN", "FOR", "WHILE", "IN", "PRAGMA", "AnnotationKeyword", 
      "INPUT", "OUTPUT", "CONST", "READONLY", "MUTABLE", "QREG", "QUBIT", 
      "CREG", "BOOL", "BIT", "INT", "UINT", "FLOAT", "ANGLE", "COMPLEX", 
      "ARRAY", "VOID", "DURATION", "STRETCH", "STRING", "GPHASE", "INV", 
      "POW", "CTRL", "NEGCTRL", "DIM", "DURATIONOF", "DELAY", "RESET", "MEASURE", 
      "BARRIER", "BooleanLiteral", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", 
      "LPAREN", "RPAREN", "COLON", "SEMICOLON", "DOT", "COMMA", "EQUALS", 
      "ARROW", "PLUS", "DOUBLE_PLUS", "MINUS", "ASTERISK", "DOUBLE_ASTERISK", 
      "SLASH", "PERCENT", "PIPE", "DOUBLE_PIPE", "AMPERSAND", "DOUBLE_AMPERSAND", 
      "CARET", "AT", "TILDE", "EXCLAMATION_POINT", "EqualityOperator", "CompoundAssignmentOperator", 
      "ComparisonOperator", "BitshiftOperator", "IMAG", "ImaginaryLiteral", 
      "BinaryIntegerLiteral", "OctalIntegerLiteral", "DecimalIntegerLiteral", 
      "HexIntegerLiteral", "Identifier", "HardwareQubit", "FloatLiteral", 
      "TimingLiteral", "BitstringLiteral", "StringLiteral", "Whitespace", 
      "Newline", "LineComment", "BlockComment", "VERSION_IDENTIFER_WHITESPACE", 
      "VersionSpecifier", "EAT_INITIAL_SPACE", "EAT_LINE_END", "RemainingLineContent", 
      "CAL_PRELUDE_WHITESPACE", "CAL_PRELUDE_COMMENT", "DEFCAL_PRELUDE_WHITESPACE", 
      "DEFCAL_PRELUDE_COMMENT", "CalibrationBlock"
  ];
  static final Vocabulary VOCABULARY = VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'OpenQASM3Parser.g4';

  @override
  List<int> get serializedATN => _serializedATN;

  @override
  ATN getATN() {
   return _ATN;
  }

  OpenQASM3Parser(TokenStream input) : super(input) {
    interpreter = ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  ProgramContext program() {
    dynamic _localctx = ProgramContext(context, state);
    enterRule(_localctx, 0, RULE_program);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 129;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_OPENQASM) {
        state = 128;
        version();
      }

      state = 134;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 306103762193727484) != 0) || ((((_la - 68)) & ~0x3f) == 0 && ((1 << (_la - 68)) & 536614913) != 0)) {
        state = 131;
        statement();
        state = 136;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 137;
      match(TOKEN_EOF);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  VersionContext version() {
    dynamic _localctx = VersionContext(context, state);
    enterRule(_localctx, 2, RULE_version);
    try {
      enterOuterAlt(_localctx, 1);
      state = 139;
      match(TOKEN_OPENQASM);
      state = 140;
      match(TOKEN_VersionSpecifier);
      state = 141;
      match(TOKEN_SEMICOLON);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  StatementContext statement() {
    dynamic _localctx = StatementContext(context, state);
    enterRule(_localctx, 4, RULE_statement);
    int _la;
    try {
      state = 180;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_PRAGMA:
        enterOuterAlt(_localctx, 1);
        state = 143;
        pragma();
        break;
      case TOKEN_INCLUDE:
      case TOKEN_DEFCALGRAMMAR:
      case TOKEN_DEF:
      case TOKEN_CAL:
      case TOKEN_DEFCAL:
      case TOKEN_GATE:
      case TOKEN_EXTERN:
      case TOKEN_BOX:
      case TOKEN_LET:
      case TOKEN_BREAK:
      case TOKEN_CONTINUE:
      case TOKEN_IF:
      case TOKEN_END:
      case TOKEN_RETURN:
      case TOKEN_FOR:
      case TOKEN_WHILE:
      case TOKEN_AnnotationKeyword:
      case TOKEN_INPUT:
      case TOKEN_OUTPUT:
      case TOKEN_CONST:
      case TOKEN_QREG:
      case TOKEN_QUBIT:
      case TOKEN_CREG:
      case TOKEN_BOOL:
      case TOKEN_BIT:
      case TOKEN_INT:
      case TOKEN_UINT:
      case TOKEN_FLOAT:
      case TOKEN_ANGLE:
      case TOKEN_COMPLEX:
      case TOKEN_ARRAY:
      case TOKEN_DURATION:
      case TOKEN_STRETCH:
      case TOKEN_STRING:
      case TOKEN_GPHASE:
      case TOKEN_INV:
      case TOKEN_POW:
      case TOKEN_CTRL:
      case TOKEN_NEGCTRL:
      case TOKEN_DURATIONOF:
      case TOKEN_DELAY:
      case TOKEN_RESET:
      case TOKEN_MEASURE:
      case TOKEN_BARRIER:
      case TOKEN_BooleanLiteral:
      case TOKEN_LPAREN:
      case TOKEN_MINUS:
      case TOKEN_TILDE:
      case TOKEN_EXCLAMATION_POINT:
      case TOKEN_ImaginaryLiteral:
      case TOKEN_BinaryIntegerLiteral:
      case TOKEN_OctalIntegerLiteral:
      case TOKEN_DecimalIntegerLiteral:
      case TOKEN_HexIntegerLiteral:
      case TOKEN_Identifier:
      case TOKEN_HardwareQubit:
      case TOKEN_FloatLiteral:
      case TOKEN_TimingLiteral:
      case TOKEN_BitstringLiteral:
      case TOKEN_StringLiteral:
        enterOuterAlt(_localctx, 2);
        state = 147;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while (_la == TOKEN_AnnotationKeyword) {
          state = 144;
          annotation();
          state = 149;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 178;
        errorHandler.sync(this);
        switch (interpreter!.adaptivePredict(tokenStream, 3, context)) {
        case 1:
          state = 150;
          aliasDeclarationStatement();
          break;
        case 2:
          state = 151;
          assignmentStatement();
          break;
        case 3:
          state = 152;
          barrierStatement();
          break;
        case 4:
          state = 153;
          boxStatement();
          break;
        case 5:
          state = 154;
          breakStatement();
          break;
        case 6:
          state = 155;
          calStatement();
          break;
        case 7:
          state = 156;
          calibrationGrammarStatement();
          break;
        case 8:
          state = 157;
          classicalDeclarationStatement();
          break;
        case 9:
          state = 158;
          constDeclarationStatement();
          break;
        case 10:
          state = 159;
          continueStatement();
          break;
        case 11:
          state = 160;
          defStatement();
          break;
        case 12:
          state = 161;
          defcalStatement();
          break;
        case 13:
          state = 162;
          delayStatement();
          break;
        case 14:
          state = 163;
          endStatement();
          break;
        case 15:
          state = 164;
          expressionStatement();
          break;
        case 16:
          state = 165;
          externStatement();
          break;
        case 17:
          state = 166;
          forStatement();
          break;
        case 18:
          state = 167;
          gateCallStatement();
          break;
        case 19:
          state = 168;
          gateStatement();
          break;
        case 20:
          state = 169;
          ifStatement();
          break;
        case 21:
          state = 170;
          includeStatement();
          break;
        case 22:
          state = 171;
          ioDeclarationStatement();
          break;
        case 23:
          state = 172;
          measureArrowAssignmentStatement();
          break;
        case 24:
          state = 173;
          oldStyleDeclarationStatement();
          break;
        case 25:
          state = 174;
          quantumDeclarationStatement();
          break;
        case 26:
          state = 175;
          resetStatement();
          break;
        case 27:
          state = 176;
          returnStatement();
          break;
        case 28:
          state = 177;
          whileStatement();
          break;
        }
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  AnnotationContext annotation() {
    dynamic _localctx = AnnotationContext(context, state);
    enterRule(_localctx, 6, RULE_annotation);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 182;
      match(TOKEN_AnnotationKeyword);
      state = 184;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_RemainingLineContent) {
        state = 183;
        match(TOKEN_RemainingLineContent);
      }

    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ScopeContext scope() {
    dynamic _localctx = ScopeContext(context, state);
    enterRule(_localctx, 8, RULE_scope);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 186;
      match(TOKEN_LBRACE);
      state = 190;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 306103762193727484) != 0) || ((((_la - 68)) & ~0x3f) == 0 && ((1 << (_la - 68)) & 536614913) != 0)) {
        state = 187;
        statement();
        state = 192;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 193;
      match(TOKEN_RBRACE);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  PragmaContext pragma() {
    dynamic _localctx = PragmaContext(context, state);
    enterRule(_localctx, 10, RULE_pragma);
    try {
      enterOuterAlt(_localctx, 1);
      state = 195;
      match(TOKEN_PRAGMA);
      state = 196;
      match(TOKEN_RemainingLineContent);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  StatementOrScopeContext statementOrScope() {
    dynamic _localctx = StatementOrScopeContext(context, state);
    enterRule(_localctx, 12, RULE_statementOrScope);
    try {
      state = 200;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_INCLUDE:
      case TOKEN_DEFCALGRAMMAR:
      case TOKEN_DEF:
      case TOKEN_CAL:
      case TOKEN_DEFCAL:
      case TOKEN_GATE:
      case TOKEN_EXTERN:
      case TOKEN_BOX:
      case TOKEN_LET:
      case TOKEN_BREAK:
      case TOKEN_CONTINUE:
      case TOKEN_IF:
      case TOKEN_END:
      case TOKEN_RETURN:
      case TOKEN_FOR:
      case TOKEN_WHILE:
      case TOKEN_PRAGMA:
      case TOKEN_AnnotationKeyword:
      case TOKEN_INPUT:
      case TOKEN_OUTPUT:
      case TOKEN_CONST:
      case TOKEN_QREG:
      case TOKEN_QUBIT:
      case TOKEN_CREG:
      case TOKEN_BOOL:
      case TOKEN_BIT:
      case TOKEN_INT:
      case TOKEN_UINT:
      case TOKEN_FLOAT:
      case TOKEN_ANGLE:
      case TOKEN_COMPLEX:
      case TOKEN_ARRAY:
      case TOKEN_DURATION:
      case TOKEN_STRETCH:
      case TOKEN_STRING:
      case TOKEN_GPHASE:
      case TOKEN_INV:
      case TOKEN_POW:
      case TOKEN_CTRL:
      case TOKEN_NEGCTRL:
      case TOKEN_DURATIONOF:
      case TOKEN_DELAY:
      case TOKEN_RESET:
      case TOKEN_MEASURE:
      case TOKEN_BARRIER:
      case TOKEN_BooleanLiteral:
      case TOKEN_LPAREN:
      case TOKEN_MINUS:
      case TOKEN_TILDE:
      case TOKEN_EXCLAMATION_POINT:
      case TOKEN_ImaginaryLiteral:
      case TOKEN_BinaryIntegerLiteral:
      case TOKEN_OctalIntegerLiteral:
      case TOKEN_DecimalIntegerLiteral:
      case TOKEN_HexIntegerLiteral:
      case TOKEN_Identifier:
      case TOKEN_HardwareQubit:
      case TOKEN_FloatLiteral:
      case TOKEN_TimingLiteral:
      case TOKEN_BitstringLiteral:
      case TOKEN_StringLiteral:
        enterOuterAlt(_localctx, 1);
        state = 198;
        statement();
        break;
      case TOKEN_LBRACE:
        enterOuterAlt(_localctx, 2);
        state = 199;
        scope();
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  CalibrationGrammarStatementContext calibrationGrammarStatement() {
    dynamic _localctx = CalibrationGrammarStatementContext(context, state);
    enterRule(_localctx, 14, RULE_calibrationGrammarStatement);
    try {
      enterOuterAlt(_localctx, 1);
      state = 202;
      match(TOKEN_DEFCALGRAMMAR);
      state = 203;
      match(TOKEN_StringLiteral);
      state = 204;
      match(TOKEN_SEMICOLON);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }
